# MTGA_Draft_17Lands

./: .coveragerc  .gitignore  LICENSE  MTGA_Draft_17Lands.code-workspace  README.md  bump_version.py  calendar.json  config.json  index.html  main.py  main.spec  manifest.json  pyproject.toml  release_notes.txt  repomix.config.json  report.json  requirements.txt  simulator.py  start.sh  test_tkinter.py
Sets/: OTJ_PremierDraft_Data.json
Temp/: temp_card_data.json  temp_set_list.json
builder/: Installer.iss
combiner/: combine_sets.py  combiner_main.py  constants.py
docs/: 00-system-overview.md  01-domain-models.md  02-log-parsing-rules.md  03-business-logic.md  04-external-integrations.md  05-server-etl-pipeline.md  AI_Context.md
scryfall_cache/: BLB_cards.json  BLB_tags.json  FDN_cards.json  FDN_tags.json  TMT_cards.json  TMT_tags.json
server/: calendar.json  config.py  extract.py  load.py  main.py  mock_ui.py  report.py  requirements-server.txt  transform.py  utils.py
src/: app_update.py  card_logic.py  configuration.py  constants.py  dataset.py  dataset_updater.py  download_dataset.py  file_extractor.py  limited_sets.py  log_scanner.py  logger.py  notifications.py  ocr.py  overlay.py  scaled_window.py  scryfall_tagger.py  sealed_logic.py  set_metrics.py  seventeenlands.py  seventeenlands_local.py  signals.py  tier_list.py  ui_progress.py  utils.py
tests/: conftest.py  test_advisor_engine.py  test_advisor_enginer.py  test_advisor_schema.py  test_app.py  test_app_controller.py  test_app_layout.py  test_app_orchestrator.py  test_app_update.py  test_compare.py  (+54 more)
(+68 files in other folders)
